res/styles/less/stylesheet.less
/* import less files */
@import url('definitions.less');
@import url('reset.less');
@import url('animations.less');
@import url('filters.less');
@import url('grid.less');

/* set the viewport properties (limited browser support) */
@viewport {
    width: device-width;
    user-zoom: fixed;
    zoom: 1;
    min-zoom: 1;
    max-zoom: 1;
}

/* style rules */
html { height: 100%; }

body {
    margin: 0;
    padding: 0;
    height: 100%;
    background: @light-color;
    color: @dark-color;
    line-height: 21px;
    font-size: 16px;
    font-family: @body-font;
    font-weight: 400;
}

a {
    .ease;

    color: @accent-color;
    text-decoration: none;

    &:hover, &:focus { color: darken(@accent-color, 20%); }

    &:active { color: darken(@accent-color, 30%); }
}

img { max-width: 100%; }

h1, h2, h3 { &:extend(.heading); }

h1 { font-size: 2.4em; }

h2 { font-size: 1.8em; }

h3 { font-size: 1.5em; }

p { margin: .5em 0; }

input[type=submit], input[type=button] { .buttons; }

input[type=entry], input[type=text],  input[type=number], textarea { &:extend(.entry); }

pre {
    max-width: 30em;
    white-space: pre-wrap;
    word-wrap: break-word;
    padding: .5em;
    margin: 1em 0;
    border-radius: @roundness;
    border: 1px dashed darken(@light-color, 20%);
    background-color: darken(@light-color, 1%);
}

code {
    font-weight: 600;
    font-family: @monospace-font;
    line-height: 1.2em;
}

section {
    padding: .5em;

    @media only screen and (min-width: 700px) { padding: 1em; }
}

footer {
    border-top: 1px solid darken(@dark-color, 10%);
    background-color: @dark-color;
    color: darken(@light-color, 20%);
    font-size: .9em;
    text-align: center;

    padding: 1em;

    @media only screen and (min-width: 700px) { padding: 2em; }

    a {
        color: darken(@light-color, 20%);

        &:focus, &:hover { color: darken(@light-color, 10%); }

        &:active { color: darken(@light-color, 40%); }
    }
}

/* widget styles */
.heading {
    line-height: 1em;
    font-family: @heading-font;
    font-weight: 400;
    margin: 1em auto .5em;
}

.entry {
    .ease;

    display: inline-block;
    margin: 1em 0;
    padding: 1em 1.5em;
    border-radius: @roundness;
    background-color: lighten(@light-color, 50%);
    border: 1px solid darken(@light-color, 20%);
    border-top-color: darken(@light-color, 30%);
    color: @dark-color;
    font-size: 1em;
    box-shadow: inset 0 1px 1px 0 rgba(0,0,0,0.1);
    outline: none;

    &:hover, &:focus, &:active {
        border-color: darken(@light-color, 30%);
        border-top-color: darken(@light-color, 40%);
        outline: none;
    }
}

.buttons(@bg: @accent-color; @fg: @light-color) {
    .ease;

    display: inline-block;
    margin: 1em 0;
    padding: 1em 1.5em;
    border-radius: @roundness;
    background-color: @bg;
    border: 1px solid @bg;
    border-bottom-color: darken(@bg, 10%);
    color: @fg;
    text-align: center;
    font-size: 1em;
    font-weight: 600;
    cursor: pointer;
    text-transform: uppercase;

    &:hover, &:focus {
        background-color: darken(@bg, 5%);
        border-color: darken(@bg, 5%);
        border-bottom-color: darken(@bg, 15%);
        color: @fg;
    }

    &:active {
        background-color: darken(@bg, 10%);
        border-color: darken(@bg, 10%);
        border-bottom-color: darken(@bg, 20%);
        color: @fg;
    }
}

.button { .buttons; }

.zigzag(@inner; @outer; @position) {
    background: linear-gradient(-135deg, @outer 5px, transparent 0) 0 5px,
                linear-gradient(135deg, @outer 5px, @inner 0) 0 5px;

    background-color: @inner;
    background-position: left @position;
    background-repeat: repeat-x;
    background-size: 10px 10px;
}

.cover {
    display: table;
    table-layout: fixed;
    height: 100%;
    width: 100%;
    background-color: @accent-color;
    background-image: url(../../img/bg.png);
    background-position: center center;
    background-repeat: no-repeat;
    background-size: 100%;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    color: @light-color;

    .cover-content {
        &:extend(.section);

        position: relative;
        display: table-cell;
        vertical-align: middle;
        text-align: center;

        .logo { padding: 2em; }

        .button {
            border: 2px solid @light-color;
            background-color: transparent;

            &:focus, &:hover, &:active {
                background-color: @light-color;
                color: @accent-color;
            }
        }

        .donate-button {
            padding: 1em;
            font-size: 1.2em;
            color: @light-color;
            cursor: pointer;

            &:focus, &:hover, &:active { text-decoration: underline; }
        }
    }
}

.modal { display: none; }

.modal-open {
    overflow: hidden;

    @media only screen and (min-width: 480px) {
        overflow: auto;

        .dim {
            .fadein(.5s 1);

            display: block;
            background: rgba(0,0,0,0.7);
            position: fixed;
            top: 0;
            left: 0;
            right: 0;
            bottom: 0;
            z-index: 2;
        }
    }

    .modal {
        .appear(.5s 1);

        background: @light-color;
        border-style: none;
        position: fixed;
        z-index: 5;
        border-radius: 0;
        left: 0;
        top: 0;
        margin-left: 0;
        margin-top: 0;
        width: 100%;
        height: 100%;
        padding: 2em;
        overflow: auto;
        display: block;

        @media only screen and (min-width: 480px) {
            border-radius: @roundness;
            left: 50%;
            top: 50%;
            margin-left: -14.5em;
            margin-top: -7em;
            width: 29em;
            height: 16em;
        }

        form {
            position: relative;

            &:before {
                position: absolute;
                display: block;
                content: "$";
                top: 2.05em;
                left: 1em;
            }

            input[type=number] { padding-left: 2em; }
        }
    }
}

.artwork {
    .products {
        &:extend(.section);

        .category {
            .thumbgrid(246px, 20px);

            .product {
                padding-top: .25em;
                padding-bottom: .25em;
                color: @dark-color;
                cursor: pointer;

                img {
                    .ease;

                    border: 3px solid @light-color;
                    border-radius: 2px;
                    box-shadow: 0 1px 3px rgba(0,0,0,0.3);
                }

                &:focus, &:hover, &:active {
                    color: @dark-color;

                    img {
                        border-color: darken(@light-color, 5%);
                        box-shadow: 0 1px 3px rgba(0,0,0,0.6);
                    }
                }

                .desc {
                    display: block;
                    padding: .5em 0;
                    text-align: center;

                    .name, .more { display: block; }

                    .name { font-weight: 600; }

                    .more { color: lighten(@dark-color, 20%); }
                }
            }
        }
    }
}

.about {
    .zigzag(darken(@light-color, 5%); @light-color; top);

    background-color: darken(@light-color, 5%);
    text-align: center;

    .team {
        &:extend(.section);

        .thumbgrid(200px, 25px);

        padding: .25em 0;

        .member {
            img {
                height: 150px;
                width: 150px;
                border-radius: 75px;
            }

            .img {
                &:focus, &:hover, &:active { background: none; }
            }

            .name {
                display: block;
                padding: .5em 0;
                text-align: center;
                font-style: italic;
                color: @dark-color;

                &:focus, &:hover, &:active { color: @dark-color; }
            }
        }
    }
}

.section {
    max-width: 60em;
    margin: auto;
    padding: 2em 0;
}

::selection {
    background-color: @accent-color;
    color: @light-color;
}

::-moz-selection {
    background-color: @accent-color;
    color: @light-color;
}

::-webkit-scrollbar {
    width: 12px;
    height: 12px;
}

::-webkit-scrollbar-button { display: none; }

::-webkit-scrollbar-track { background-color: @light-color; }

::-webkit-scrollbar-thumb {
    border: 1px solid darken(@light-color, 20%);
    background-color: darken(@light-color, 10%);

    &:vertical { min-height: 100px; }

    &:horizontal { min-width: 100px; }

    &:hover, &:focus {
        border: 1px solid darken(@light-color, 30%);
        background-color: darken(@light-color, 20%);
    }

    &:active {
        border-color: darken(@accent-color, 10%);
        background-color: @accent-color;
    }
}

